--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   },
-  "homepage": "https://github.com/Mikhe/my-cv"
+  "homepage": "https://mikhe.github.io/my-cv/"
 }
